# q-api-super

./: Cargo.toml  Containerfile  README.md  TODO.md  build.sh  compose.yaml
src/: db.rs  main.rs  projects.rs  sched.rs
src/models/: center.rs  event.rs  join.rs  mod.rs  project.rs  user.rs
src/modules/: mod.rs
src/modules/events/: manager.rs
src/modules/join/: manager.rs
src/modules/projects/: manager.rs  mod.rs
src/modules/projects/events/: mod.rs
src/modules/projects/interv_users/: mod.rs
src/modules/users/: manager.rs
