[package]
name = "q-api-super"
version = "0.2.2"
edition = "2021"

[dependencies]
async-trait = "0.1.79"
futures = "0.3.30"
once_cell = "1.19.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
surrealdb = { version = "1.4.2", features = ["protocol-http"] }
tempdir = "0.3.7"
tokio = { version = "1.36.0", features = ["full"] }
tokio-cron-scheduler = "0.10.0"
uuid = "1.7.0"
